| Bug #50661 | Initial Start of partitioned nodes is not possible | ||
|---|---|---|---|
| Submitted: | 27 Jan 2010 13:31 | Modified: | 28 Jan 2010 9:32 |
| Reporter: | Geert Vanderkelen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | mysql-5.1.39-ndb-7.0.10 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[27 Jan 2010 13:31]
Geert Vanderkelen
[27 Jan 2010 13:32]
Geert Vanderkelen
Verified using MySQL Cluster 7.0.10. Works well with MySQL Cluster 6.3.30.
[27 Jan 2010 14:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/98345 3378 Jonas Oreland 2010-01-27 ndb - bug#50661 - fix initial partial start
[27 Jan 2010 14:32]
Jonas Oreland
pushed to 7.0.11
[28 Jan 2010 9:32]
Jon Stephens
Documented in the NDB-7.0.11 changelog as follows:
Initial start of partitioned nodes did not work correctly. This
issue was observed in MySQL Cluster NDB 7.0 only.
Closed.
