ndb - bug#50661 - fix initial partial start